# GaussForge

./: .gitignore  CMakeLists.txt  README.md  tiny_gauss.ply
.github/workflows/: build.yml  npm.yml  pip.yml
cmakes/: sog.cmake  spz.cmake  wasm.cmake  zlib.cmake
include/gf/core/: errors.h  version.h.in
include/gf/io/: writer.h
python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
python/example/: .gitignore  test.py
python/src/gaussforge/: __init__.py  bindings.cpp
src/cli/: main.cpp
src/io/: ksplat_reader.cpp  ply_compressed_reader.cpp  ply_compressed_writer.cpp  ply_reader.cpp  ply_writer.cpp  registry.cpp  sog_writer.cpp  splat_reader.cpp  splat_writer.cpp  spz_reader.cpp  spz_writer.cpp
src/wasm/: bindings.cpp
tests/: CMakeLists.txt  ksplat_reader_benchmark.cpp  ksplat_writer_benchmark.cpp  ply_compressed_reader_benchmark.cpp  ply_compressed_writer_benchmark.cpp  ply_reader_benchmark.cpp  ply_writer_benchmark.cpp  sog_reader_benchmark.cpp  sog_writer_benchmark.cpp  splat_reader_benchmark.cpp  splat_writer_benchmark.cpp  spz_reader_benchmark.cpp  spz_writer_benchmark.cpp
wasm/: .gitignore  README.md  base.ts  build-wasm.js  index.node.ts  index.ts  index.web.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json  types.ts
wasm/example/: package.json  test.js
wasm/nextjs/: README.md  package-lock.json  package.json  pnpm-lock.yaml
wasm/nextjs/app/: globals.css  layout.tsx  page.tsx
wasm/nextjs/scripts/: copy-wasm.js
