[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "gaussforge"
version = "0.5.1"
description = "High-performance Gaussian Splatting format conversion library"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "tcodestudio" }]
keywords = [
    "gaussian-splatting",
    "3d",
    "point-cloud",
    "format-conversion",
    "ply",
    "splat",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/3dgscloud/GaussForge"
Repository = "https://github.com/3dgscloud/GaussForge.git"
Issues = "https://github.com/3dgscloud/GaussForge/issues"

[tool.scikit-build]
# Build configuration
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"

# Only include the gaussforge package
wheel.packages = ["src/gaussforge"]
wheel.license-files = ["../LICENSE"]

# Exclude dependency install directories and source files from wheel
wheel.exclude = ["bin/", "lib/", "include/", "share/", "*.cpp"]

# Source distribution config
sdist.include = ["../src", "../include", "../cmakes"]

# CMake configuration
cmake.version = ">=3.26"

[tool.scikit-build.cmake.define]
CMAKE_POSITION_INDEPENDENT_CODE = "ON"
